beth-dep-laggy.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: beth-laggy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: beth
        version: v04
    spec:
      containers:
      - name: beth
        image: otomato/istio-games-beth:laggy
        imagePullPolicy: Always
        ports:
        - containerPort: 80
