aleph-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: aleph
  labels:
    app: aleph
spec:
  ports:
    - name: http-aleph 
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
      app: aleph
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aleph
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: aleph
    spec:
      containers:
      - name: aleph
        image: otomato/istio-games-aleph:0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
