front-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  ports:
    - name: http-front 
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
      app: front
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: otomato/istio-games-front:0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
