istio-route-rule-aleph-canary.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aleph
spec:
  hosts:
  - aleph
  http:
  - route:
    - destination:
        host: aleph
        port:
          number: 80
        subset: production
      weight: 90
    - destination:
        host: aleph
        port:
          number: 80
        subset: canary
      weight: 10
