istio-route-rule-canary.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aleph
spec:
  hosts:
  - aleph
  http:
  - route:
    - destination:
        host: aleph
        port:
          number: 80
        subset: production
      weight: 100
    - destination:
        host: aleph
        port:
          number: 80
        subset: canary
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beth
spec:
  hosts:
  - beth
  http:
  - route:
    - destination:
        host: beth
        port:
          number: 80
        subset: production
      weight: 100
    - destination:
        host: beth
        port:
          number: 80
        subset: canary
      weight: 0
